--- a/src/index.html
+++ b/src/index.html
@@ -3,16 +3,16 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta id="viewport" name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no"
-  />
-  <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta http-equiv="pragma" content="no-cache" />
   <meta http-equiv="Cache-Control" content="no-cache" />
   <meta http-equiv="Expires" content="0" />
+
+  <meta id="viewport" name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no"
+  />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
   <meta content="telephone=no" name="format-detection" />
-  <link rel="shortcut icon" href="http://www.suning.com/favicon.ico" type="image/x-icon">
-  <title>重置登录密码</title>
+  <title>React Router4 ing</title>
   <script>
     appConfig={
       dtUrl: "https://dtpre.cnsuning.com",
@@ -22,7 +22,6 @@
 
 <body>
   <div id="root"></div>
-  <script src="https://dtpre.cnsuning.com/detect/dt/siller.js"></script>
 </body>
 
 </html>
